[project]
name = "rblx-tracker"
version = "0.1.0"
description = "roblox user tracker"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "plyer>=2.1",
]

[project.scripts]
tracker = "tracker.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracker*"]
